Zoom is still giving issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ hr {
     border-radius: 25px 25px;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 400px){
     body{
         display: inline-block;
     }
